open links in new tab, update portfolio project image, fix text wrapping for ie

--- a/src/styles/components/_skill.scss
+++ b/src/styles/components/_skill.scss
@@ -25,6 +25,7 @@
 
 .skill__box {
   padding-top: $size-5;
+  width: 100%;
 }
 
 .skill__name {
